--- a/TA_lab1/TA_lab1/TA_lab1.vcxproj
+++ b/TA_lab1/TA_lab1/TA_lab1.vcxproj
@@ -174,6 +174,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="input.json" />
     <None Include="json_spirit\json_spirit.vcproj" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
