--- a/TA_lab1/TA_lab1/TA_lab1.vcxproj
+++ b/TA_lab1/TA_lab1/TA_lab1.vcxproj
@@ -145,6 +145,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CommandHandler.h" />
     <ClInclude Include="json_spirit\json_spirit.h" />
     <ClInclude Include="json_spirit\json_spirit_error_position.h" />
     <ClInclude Include="json_spirit\json_spirit_reader.h" />
@@ -155,13 +156,18 @@
     <ClInclude Include="json_spirit\json_spirit_writer.h" />
     <ClInclude Include="json_spirit\json_spirit_writer_options.h" />
     <ClInclude Include="json_spirit\json_spirit_writer_template.h" />
+    <ClInclude Include="StateMachine.h" />
+    <ClInclude Include="StateMachineProcessor.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CommandHandler.cpp" />
     <ClCompile Include="json_spirit\json_spirit_reader.cpp" />
     <ClCompile Include="json_spirit\json_spirit_value.cpp" />
     <ClCompile Include="json_spirit\json_spirit_writer.cpp" />
+    <ClCompile Include="StateMachine.cpp" />
+    <ClCompile Include="StateMachineProcessor.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
