--- a/TA_lab1/TA_lab1/TA_lab1.vcxproj.filters
+++ b/TA_lab1/TA_lab1/TA_lab1.vcxproj.filters
@@ -5,55 +5,61 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Заголовочные файлы">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
     <Filter Include="Файлы ресурсов">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    </Filter>
+    <Filter Include="JSON">
+      <UniqueIdentifier>{4818b480-587e-4243-89c9-ed2dd89d2c7a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Заголовочные файлы</Filter>
-    </ClInclude>
     <ClInclude Include="json_spirit\json_spirit.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_error_position.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_reader.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_reader_template.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_stream_reader.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_utils.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_value.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_writer.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_writer_options.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
     <ClInclude Include="json_spirit\json_spirit_writer_template.h">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClInclude>
+    <ClInclude Include="stdafx.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="targetver.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="StateMachineProcessor.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="StateMachine.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
+    <ClInclude Include="CommandHandler.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,21 +69,30 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="json_spirit\json_spirit_reader.cpp">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClCompile>
     <ClCompile Include="json_spirit\json_spirit_value.cpp">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
     </ClCompile>
     <ClCompile Include="json_spirit\json_spirit_writer.cpp">
-      <Filter>Заголовочные файлы</Filter>
+      <Filter>JSON</Filter>
+    </ClCompile>
+    <ClCompile Include="StateMachineProcessor.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="StateMachine.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="CommandHandler.cpp">
+      <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="json_spirit\json_spirit.vcproj">
-      <Filter>Заголовочные файлы</Filter>
-    </None>
     <None Include="input.json">
       <Filter>Файлы ресурсов</Filter>
+    </None>
+    <None Include="json_spirit\json_spirit.vcproj">
+      <Filter>JSON</Filter>
     </None>
   </ItemGroup>
 </Project>
