--- a/TA_lab1/TA_lab1/TA_lab1.vcxproj.filters
+++ b/TA_lab1/TA_lab1/TA_lab1.vcxproj.filters
@@ -59,7 +59,9 @@
     <ClInclude Include="StateMachine.h">
       <Filter>Файлы исходного кода</Filter>
     </ClInclude>
-    <ClInclude Include="CommandHandler.h" />
+    <ClInclude Include="CommandHandler.h">
+      <Filter>Файлы исходного кода</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
